part-32: conditional beans

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -5,6 +5,9 @@ server.servlet.context-path=/finances
 spring.main.banner-mode=off
 logging.level.org.springframework=INFO
 
+# Testing
+tests.admin.enabled=true
+
 # by default only health and info endpoints are enabled
 management.endpoints.web.exposure.include=*
 #management.endpoints.web.exposure.exclude=metrics
